@@ -1,3 +1,10 @@
+2017-08-15  Joseph Myers  <joseph@codesourcery.com>
+
+	PR target/78460
+	PR target/67712
+	* config/sh/sh-mem.cc (sh_expand_cmpnstr): Only unroll for
+	constant count if that count is less than 32.
+
 2017-08-15  Nathan Sidwell  <nathan@acm.org>
 
 	* gcc.c (execute): Emit friendlier message if inferior is killed
